--- a/source/AspNetCore/MyFirstRest/MyFirstRest/MyFirstRest.csproj
+++ b/source/AspNetCore/MyFirstRest/MyFirstRest/MyFirstRest.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
         <Nullable>enable</Nullable>
-    </PropertyGroup>
+      <UserSecretsId>7c6be890-9039-46ed-aaf9-0e4bb14960ac</UserSecretsId>
+  </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Data.SqlClient" Version="3.0.0" />
